// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubstringWrapper rendering should render with b tag 1`] = `
<div>
  this is a 
  <b>
    test
  </b>
</div>
`;

exports[`SubstringWrapper rendering should work if regex failed 1`] = `
<div>
  this is a test
</div>
`;

exports[`SubstringWrapper rendering should wrap twice 1`] = `
<div>
  <b>
    test
  </b>
   - this is a 
  <b>
    test
  </b>
</div>
`;

exports[`SubstringWrapper rendering should wrap with another element 1`] = `
<div>
  this is a 
  <i>
    test
  </i>
</div>
`;

exports[`SubstringWrapper rendering substring is not found 1`] = `
<div>
  this is a SubstringWrapper component
</div>
`;
